[gd_scene load_steps=28 format=3 uid="uid://bpputajcxvx8o"]

[ext_resource type="Script" path="res://game/characters/people/people.gd" id="1_3g2sa"]
[ext_resource type="Texture2D" uid="uid://d23wf5boynxe0" path="res://game/characters/people/mensch1spritesheet.png" id="1_bl8n6"]
[ext_resource type="Texture2D" uid="uid://dh1nk45in5e5y" path="res://game/characters/people/mensch2spritesheet.png" id="3_abdnm"]
[ext_resource type="Texture2D" uid="uid://cqk61nhli3ebf" path="res://game/characters/people/mensch3spritesheet.png" id="4_y1h33"]
[ext_resource type="Texture2D" uid="uid://dq2l7cn8rllxi" path="res://game/characters/people/mensch4spritesheet.png" id="5_patwt"]
[ext_resource type="Texture2D" uid="uid://osfvi33bft2u" path="res://game/characters/people/zombie1spritesheet.png" id="6_fxbjj"]
[ext_resource type="Texture2D" uid="uid://d23hgpse2lfy" path="res://game/characters/people/zombie2spritesheet.png" id="7_e5csm"]
[ext_resource type="Texture2D" uid="uid://c3q4cg2t58so2" path="res://game/characters/people/zombie3spritesheet.png" id="8_xv4x6"]
[ext_resource type="Texture2D" uid="uid://bbc3qoxe3fowi" path="res://game/characters/people/zombie4spritesheet.png" id="9_nftmx"]
[ext_resource type="AudioStream" uid="uid://nrw27asgibxb" path="res://assets/audio/effects/zombie_1.wav" id="10_40qcm"]
[ext_resource type="AudioStream" uid="uid://dgxob557vmp1n" path="res://assets/audio/effects/zombie_2.wav" id="11_alk8w"]
[ext_resource type="AudioStream" uid="uid://dgfqew68i50at" path="res://assets/audio/effects/zombie_3.wav" id="12_y1buf"]
[ext_resource type="PackedScene" uid="uid://dhq6k5l1banr3" path="res://game/characters/people/dialog_bubble.tscn" id="13_fe4qk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x672s"]

[sub_resource type="Animation" id="Animation_e320f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_v4rlb"]
resource_name = "idle_down"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gdilt"]
resource_name = "idle_left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_3h6a3"]
resource_name = "idle_right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_3pqqx"]
resource_name = "idle_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_5l8k5"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(0, 0), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_mt1tj"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(0, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_r2o37"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(0, 3), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_126jp"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(0, 1), Vector2i(2, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hhovg"]
_data = {
"RESET": SubResource("Animation_e320f"),
"idle_down": SubResource("Animation_v4rlb"),
"idle_left": SubResource("Animation_gdilt"),
"idle_right": SubResource("Animation_3h6a3"),
"idle_up": SubResource("Animation_3pqqx"),
"walk_down": SubResource("Animation_5l8k5"),
"walk_left": SubResource("Animation_mt1tj"),
"walk_right": SubResource("Animation_r2o37"),
"walk_up": SubResource("Animation_126jp")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_04ruk"]
random_pitch = 1.35
streams_count = 3
stream_0/stream = ExtResource("10_40qcm")
stream_0/weight = 1.0
stream_1/stream = ExtResource("11_alk8w")
stream_1/weight = 1.0
stream_2/stream = ExtResource("12_y1buf")
stream_2/weight = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xlybd"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2byp1"]
radius = 16.0

[node name="People" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_3g2sa")
human_variations = Array[Texture2D]([ExtResource("1_bl8n6"), ExtResource("3_abdnm"), ExtResource("4_y1h33"), ExtResource("5_patwt")])
zombie_variations = Array[Texture2D]([ExtResource("6_fxbjj"), ExtResource("7_e5csm"), ExtResource("8_xv4x6"), ExtResource("9_nftmx")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_x672s")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -32)
texture = ExtResource("1_bl8n6")
hframes = 3
vframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_hhovg")
}

[node name="MoanTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="snd_moan" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_04ruk")
max_distance = 800.0
bus = &"SFX"
area_mask = 0

[node name="AlertDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertDetector"]
shape = SubResource("CircleShape2D_xlybd")
debug_color = Color(0.45098, 0.596078, 0, 0.164706)

[node name="DialogBubble" parent="." instance=ExtResource("13_fe4qk")]
unique_name_in_owner = true
position = Vector2(0, -68)

[node name="DialogTimer" type="Timer" parent="DialogBubble"]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="DeathDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathDetector"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_2byp1")

[connection signal="timeout" from="MoanTimer" to="." method="_on_moan_timer_timeout"]
[connection signal="body_entered" from="AlertDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="AlertDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="DialogBubble/DialogTimer" to="." method="_on_dialog_timer_timeout"]
[connection signal="body_entered" from="DeathDetector" to="." method="_on_death_detector_body_entered"]
